testsvc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: opa-service
spec:
  type: LoadBalancer
  selector: 
    app: opa-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
